[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "find_404"
version = "1.1.8"
authors = [
  { name = "Sergio Garcia", email = "sergio@garciadelacruz.es" },
]
description = "A tool to find broken links (404s) and oversized pages in websites"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0",
]

[project.scripts]
find_404 = "find_404.cli:main"
bump-version = "scripts.bump_version:main"

[project.urls]
"Homepage" = "https://github.com/singiamtel/404-finder"
"Bug Tracker" = "https://github.com/singiamtel/404-finder/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/find_404", "scripts"] 
